# Decker-Wattenhofer-prototype

./: .gitignore  CMakeLists.txt  LICENSE  README.md  ROAD_TO_SIGNET.md  SIGNET_READINESS.md  bitcoin-cli.sh  gaps-to-fix.md  run_regtest.sh
docs/: SUPERSCALAR_EXPLAINED.md
include/superscalar/: bridge.h  channel.h  client.h  crypto_aead.h  factory.h  fee.h  jit_channel.h  keyfile.h  ladder.h  lsp.h  lsp_channels.h  musig.h  noise.h  persist.h  regtest.h  report.h  shachain.h  tapscript.h  tx_builder.h  watchtower.h  wire.h
src/: bridge.c  channel.c  client.c  crypto_aead.c  dw_state.c  factory.c  fee.c  jit_channel.c  keyfile.c  ladder.c  lsp.c  lsp_channels.c  musig.c  noise.c  persist.c  regtest.c  report.c  shachain.c  tapscript.c  tx_builder.c  watchtower.c  wire.c
tests/: test_adaptor.c  test_bridge.c  test_channel.c  test_channels.c  test_client_watchtower.c  test_cpfp.c  test_daemon.c  test_dw_state.c  test_factory.c  test_jit.c  test_ladder.c  test_main.c  test_musig.c  test_persist.c  test_reconnect.c  test_regtest.c  test_shachain.c  test_tapscript.c  test_wire.c
tools/: check_wallets.sh  cln_plugin.py  dashboard.py  demo.sh  require_regtest.sh  reset_regtest.sh  run_demo.sh  run_penalty_test.sh  run_tests.sh  run_unit_tests.sh  signet_diagnose.sh  signet_setup.sh  superscalar_bridge.c  superscalar_client.c  superscalar_lsp.c  test_orchestrator.py
